feat: add password authentication
