# src/routes/reservationTableRoutes.ts
@@ -1,8 +1,10 @@
 import express from "express";
 import validate from "../middlewares/validate";
-import { postSharedItemSchema } from "../validator/sharedItemValidator";
 import ReservationTableServices from "../services/ReservationTableService";
 import ReservationTableController from "../controllers/ReservationTableController";
+import passport from "../middlewares/passport";
+import { isReservationAdmin } from "../middlewares/auth";
+import { postReservationTableSchema } from "../validator/reservationTableValidator";
 
 const router = express.Router();
 
@@ -13,11 +15,24 @@ export default (service: ReservationTableServices) => {
   router.get("/reservations/tables/:id", controller.getReservationTableById);
   router.post(
     "/reservations/tables",
-    validate(postSharedItemSchema),
+    passport.authenticate("jwt", { session: false }),
+    isReservationAdmin,
+    validate(postReservationTableSchema),
     controller.postReservationTable
   );
-  router.put("/reservations/tables/:id", controller.updateReservationTable);
-  router.delete("/reservations/tables/:id", controller.deleteReservationTable);
+  router.put(
+    "/reservations/tables/:id",
+    passport.authenticate("jwt", { session: false }),
+    isReservationAdmin,
+    validate(postReservationTableSchema),
+    controller.updateReservationTable
+  );
+  router.delete(
+    "/reservations/tables/:id",
+    passport.authenticate("jwt", { session: false }),
+    isReservationAdmin,
+    controller.deleteReservationTable
+  );
 
   return router;
 };
